--- a/src/Acme/DemoBundle/Resources/views/Batteries/statistic.html.twig
+++ b/src/Acme/DemoBundle/Resources/views/Batteries/statistic.html.twig
@@ -1,9 +1,24 @@
-{% extends "AcmeDemoBundle::layout.html.twig" %}
-
-{% block title "Hello " ~ name %}
-
-{% block content %}
-    <h1>Hello {{ name }}!</h1>
+{% block title %}
+    <h1>Welcome to recycle batteries application</h1>
 {% endblock %}
 
-{% set code = code(_self) %}
+{% block content %}
+    <h4>Click <a href="/app_dev.php/batterypack/new">here</a> to add new batterias to the box</h4>
+    <h2>Statistics:</h2>
+    <table>
+        <thead>
+            <th>No</th>
+            <th>Type</th>
+            <th>Amount</th>
+        </thead>
+        <tbody>
+            {% for item in data %}
+            <tr>
+                <td>{{ loop.index }}</td>
+                <td>{{ item.typeName }}</td>
+                <td>{{ item.amount }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+{% endblock %}
